--- a/components_app/pubspec.yaml
+++ b/components_app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: components_app
-description: A new Flutter project.
+description: Components App
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -42,10 +42,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - data/menu_opts.json
-    - assets/
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  - data/menu_opts.json
+  - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
